fix position lock on iOS

--- a/lock/lock.css
+++ b/lock/lock.css
@@ -100,7 +100,7 @@
     left: 0;
     width: 3vmax;
     height: 6vmin;
-    text-align: center;
+    text-align: left;
     font-weight: bold; 
     border: none;
     background: transparent;
